--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   margin: 0 auto;
   padding: 0;
   text-align: center;
-  font-family: sans-serif;
+  font-family: "inter-variable", sans-serif;
   color: var(--main-color);
 }
 
@@ -23,7 +23,10 @@ header {
 }
 
 header h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
+  font-variation-settings: "wght" 100, "slnt" 0;
+  word-spacing: 0.25em;
+  letter-spacing: 0.0625em;
   margin: 0;
   padding-bottom: var(--section-spacing);
 }
@@ -74,6 +77,10 @@ main > div::before {
 
 main > div:hover {
   background: var(--square-hover);
+}
+
+main > div:hover[data-square="true"] {
+  background: var(--main-color);
 }
 
 main {
